# FracLib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FracLibConfig.cmake.in  README.md  build.bat
docs/: Features.md
example/: CMakeLists.txt  build.bat  run.bat
example/src/: main.cpp
include/: frac.h  fraction.h
src/: fraction.cpp
